--- a/package.json
+++ b/package.json
@@ -2,6 +2,15 @@
   "name": "@pokemon-omnilink/arktosmos-showdown",
   "version": "1.0.0",
   "description": "Standalone Pokemon battle simulator - a complete extraction of battle logic without external dependencies",
+  "author": "Pokemon Omnilink",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pokemon-omnilink/arktosmos-pkmn-battle-engine.git"
+  },
+  "homepage": "https://github.com/pokemon-omnilink/arktosmos-pkmn-battle-engine#readme",
+  "bugs": {
+    "url": "https://github.com/pokemon-omnilink/arktosmos-pkmn-battle-engine/issues"
+  },
   "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.js",
